--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
             <version>0.2.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
     </dependencies>
 
 </project>
