--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,6 +1,6 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/springmvc_mybatis?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/PRODUCT_DB?characterEncoding=UTF-8&serverTimezone=UTC&autoReconnect=true&useSSL=false&useUnicode=true
 jdbc.username=root
-jdbc.password=992101
+jdbc.password=showd45!
 jdbc.initialPoolSize=5
 jdbc.maxPoolSize=10
