--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,6 +1,6 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/PRODUCT_DB?characterEncoding=UTF-8&serverTimezone=UTC&autoReconnect=true&useSSL=false&useUnicode=true
-jdbc.username=root
-jdbc.password=showd45!
+jdbc.url=jdbc:mysql://58.141.217.15:3306/PRODUCT_DB?characterEncoding=UTF-8&serverTimezone=UTC&autoReconnect=true&useSSL=false&useUnicode=true
+jdbc.username=jw4005.kim
+jdbc.password=product!
 jdbc.initialPoolSize=5
 jdbc.maxPoolSize=10
