자동 줄맞춤

--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://58.141.217.20:3306/PRODUCT_DB?characterEncoding=UTF-8&serverTimezone=UTC&autoReconnect=true&useSSL=false&useUnicode=true
+jdbc.url=jdbc:mysql://58.141.217.20:3306/product?characterEncoding=UTF-8&serverTimezone=UTC&autoReconnect=true&useSSL=false&useUnicode=true
 jdbc.username=jw4005.kim
 jdbc.password=product!
 jdbc.initialPoolSize=5
